# better-context

./: .gitignore  AGENTS.md  PLAN.md  README.md  SUPPORT.md  package.json  turbo.json
.captain/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.rwx/: ci.yml  main.yml  pr.yml
apps/cli/: package.json
apps/cli/src/: index.test.ts  index.ts
apps/cli/src/commands/: add.ts  ask.ts  clear.ts  config.ts  disconnect.ts  init.ts  remove.ts  resources.ts  status.ts
apps/cli/src/effect/: cli-app.ts  errors.ts
apps/cli/src/lib/: copilot-oauth.ts  opencode-oauth.ts  telemetry.ts
apps/cli/src/tui/: services.ts
apps/desktop/: .gitignore  README.md  package.json  svelte.config.js
apps/desktop/src/: app.html
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/lib/: CopyButton.svelte  clerk.ts  config.ts
apps/desktop/src/routes/: +layout.svelte
apps/docs/: btca.spec.md
apps/docs/guides/: authentication.mdx  cli-reference.mdx
apps/sandbox/: package.json
apps/sandbox/src/: shared.ts  snapshot.ts
apps/server/: README.md  package.json
apps/server/src/: errors.test.ts  errors.ts  index.ts
apps/server/src/agent/: loop.ts
apps/server/src/collections/: service.test.ts  service.ts
apps/server/src/config/: config.test.ts  index.ts
apps/web/: @useautumn-sdk.d.ts  README.md  autumn.config.ts  package.json
scripts/: check-effectification.ts
skills/btca-pi/: SKILL.md
skills/btca-pi/scripts/: btca-source.sh
(+101 files in other folders)
