[package]
name = "btca-desktop"
version = "0.0.1"
description = "Desktop shell for the btca web app"
authors = ["Ben Davis"]
license = ""
repository = "https://github.com/bmdavis419/better-context"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "btca_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
